--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
 <body>
 
  <!-- navigation code here -->
+  <div class="container-of-the-navigation">
+    <h1>SpaceWalkers</h1>
+    <nav class="container-of-the-links">
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
+      <a href="#">Sign In</a>
+    </nav><!-- container-of-the-links -->
+  </div><!-- container-of-the-navigation -->
 
   <div class="container home">
 
