--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
     <header class="intro">
        <!-- image code here -->
+      <img src="img/main-header.png" class="main-header" alt="Earth from space">
 
       <h2>Lift Off</h2>
     
